--- a/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
+++ b/Web/Areas/EarlyWarning/Views/Home/Index.cshtml
@@ -370,7 +370,7 @@
                         <form class="form-inline" role="form">
                             <div class="form-group">
                                 <label for="selround">Filter By Round:</label>
-                                <select class="form-control" id="selround" ng-model="search.Round">
+                                <select class="form-control" id="selround" ng-model="searchReq.Round">
                                     @{
                                         var rounds = ViewBag.Rounds;
                                         foreach (var round in rounds)
@@ -395,7 +395,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="requisition in Requisitions | filter: search" class="">
+                                    <tr ng-repeat="requisition in Requisitions | filter: searchReq" class="">
                                         <td class="hidden-xs"><a ng-href="@Url.Content("~/EarlyWarning/ReliefRequisition/Allocation/{{requisition.RequisitionID}}")">{{requisition.RequisitonNumber}} </a></td>
                                         <td>{{requisition.Region}}</td>
                                         <td>{{requisition.Zone}}</td>
