--- a/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
+++ b/Web/Areas/Hub/Views/Receive/Allocations2.cshtml
@@ -50,7 +50,7 @@
             "# } #"
             );
         //columns.Bound(dis => dis.RemainingBalanceInMT).Visible(false).Title(Html.Translate("Remaining in " + quanityColumnHeader)).Format("{0:N3}").HtmlAttributes(new { align = "right" }).Encoded(false).ClientTemplate("#=adjustuom(RemainingBalanceInMT)#");
-        if (HubConstants.isValidOperation(HubConstants.Operation.New_receipt_from_donation).ToString() == "New_receipt_from_donation")
+        if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_receipt_from_donation) )
         {
             columns.Bound(dis => dis.ReceiptAllocationID).Title("").ClientTemplate("<a href='" +
                                                                                    @Url.Action("Create", "ReceiveNew", new {@ReceiptAllocationID = "#=ReceiptAllocationID#", @type = allocationType}) +
