--- a/Web/Areas/Hub/Views/TransportOrder/Index.cshtml
+++ b/Web/Areas/Hub/Views/TransportOrder/Index.cshtml
@@ -23,7 +23,7 @@
 <div>
 @(Html.Kendo().Grid<TransportOrderViewModel>().Name("Grid").Columns(columns =>
 {
-if (HubConstants.isValidOperation(HubConstants.Operation.View_transport_order_list).ToString() == "View_transport_order_list")
+if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.View_transport_order_list) )
 {
     columns.Template(t => { }).Title("No").ClientTemplate(
         "#= renderNumber(data) #").Width(30);
@@ -37,11 +37,11 @@ columns.Bound(to => to.EndDate).Width(80).HeaderHtmlAttributes(new { @class = "c
 columns.Bound(to => to.RequestedDispatchDateET).Width(80).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;" });
 columns.Bound(to => to.TransportOrderNo).Width(100).HeaderHtmlAttributes(new { style = "overflow: visible; white-space: normal" }); ;
 columns.Bound(to => to.Status).Width(60);
-if (HubConstants.isValidOperation(HubConstants.Operation.New_dispatch_to_FDPs).ToString() == "New_dispatch_to_FDPs")
+if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.New_dispatch_to_FDPs) )
 {
     columns.Bound(to => to.TransportOrderID).Width(120).ClientTemplate("<a href='" + Url.Action("GenerateDispatchAllocation", "TransportOrder", new {Area = "Procurement", id = "#=TransportOrderID#"}) + " '>Create Dispatch Plan</a>  ").HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal"});
 }
-    if (HubConstants.isValidOperation(HubConstants.Operation.Close_dispatch_plan_to_FDPs).ToString() == "Close_dispatch_plan_to_FDPs")
+    if (Cats.Helpers.UserAccountHelper.HubOperationCheck(HubConstants.Operation.Close_dispatch_plan_to_FDPs) )
     {
         columns.Command(to => to.Custom("Reject").Click("onReject")).Width(70).HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal"});
         ;
