--- a/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
+++ b/Web/Areas/Logistics/Views/FDPSIAllocation/Index.cshtml
@@ -109,7 +109,7 @@
                     </div>
                     @*<div class="actions"><a class="btn btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a></div>*@
                 </div>
-                <div class="portlet-body">
+                <div class="portlet-body"  style="height: 500px;overflow-y: scroll;">
                     <div><i class="cats-unit-pref"> Preferred Measurement </i> </div>
                     <div class="accordion dd-item" id="accordion_zone">
                         <div class="accordion-group" id="accordion_zone{{$index}}" data-index="{{zone.id}}" ng-repeat="zone in requests" class="btn-draggable" ng-model="unallocated" data-drag="zone.allocatedAmount< 0.1"
@@ -201,7 +201,7 @@
                         @*<a class="btn btn-icon-only btn-default fullscreen" href="javascript:;" data-original-title="" title=""></a>*@
                     </div>
                 </div>
-                <div class="portlet-body">
+                <div class="portlet-body"  style="height: 500px;overflow-y: scroll;">
                     @*<div class="well">
                             <div class="row">
                                 <div class="col-md-4">
