Improvement-CATS-1370  CATS-1370 ,The names/titles of reports changed to NDRMC

--- a/Web/Areas/Procurement/Views/RFQ/Details.cshtml
+++ b/Web/Areas/Procurement/Views/RFQ/Details.cshtml
@@ -68,7 +68,7 @@
         <div class="caption font-green-sharp">
             <i class="fa fa-envelope font-green-sharp"></i>
             <span class="caption-subject bold uppercase"> @Html.Translate("REQUEST FOR QUOTATION")</span>
-            <span class="caption-helper"> @Html.Translate("Disaster Risk Management and Food Security Sector")</span>
+            <span class="caption-helper"> @Html.Translate("National Disaster Risk Management Commission")</span>
         </div>
 
         <div class="actions">
@@ -77,8 +77,8 @@
     </div>
     <div class="portlet-body">
 
-        @*<h2 style="text-align: center;">
-            Disaster Risk Management and Food Security Sector
+                @*<h2 style="text-align: center;">
+           National Disaster Risk Management Commission
             <br />
             REQUEST FOR QUOTATION
         </h2>*@
