--- a/Web/Report/EarlyWarning/Ration.rdlc
+++ b/Web/Report/EarlyWarning/Ration.rdlc
@@ -356,7 +356,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>DISASTER RISK MANAGEMENT AND FOOD SECURITY SECTOR</Value>
+                  <Value>NATIONAL DISASTER RISK MANAGEMENT COMMISSION</Value>
                   <Style>
                     <FontFamily>Verdana</FontFamily>
                     <FontSize>14pt</FontSize>
