--- a/Web/Report/EarlyWarning/RegionalRequest.rdlc
+++ b/Web/Report/EarlyWarning/RegionalRequest.rdlc
@@ -1513,7 +1513,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>DISASTER RISK MANAGEMENT AND FOOD SECURITY SECTOR</Value>
+                  <Value>NATIONAL DISASTER RISK MANAGEMENT COMMISSION</Value>
                   <Style>
                     <FontSize>12pt</FontSize>
                     <FontWeight>Bold</FontWeight>
