--- a/Web/Report/Finance/CheckPayment.rdlc
+++ b/Web/Report/Finance/CheckPayment.rdlc
@@ -823,7 +823,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>DISASTER RISK MANAGEMENT AND FOOD SECURITY SECTOR</Value>
+                  <Value>NATIONAL DISASTER RISK MANAGEMENT COMMISSION</Value>
                   <Style>
                     <FontFamily>Verdana</FontFamily>
                     <FontSize>14pt</FontSize>
