--- a/Web/Report/Logisitcs/TransportRequisitionSummary.rdlc
+++ b/Web/Report/Logisitcs/TransportRequisitionSummary.rdlc
@@ -2014,7 +2014,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>DISASTER RISK MANAGEMENT AND FOOD SECURITY SECTOR</Value>
+                  <Value>NATIONAL DISASTER MANAGEMENT COMMISSION</Value>
                   <Style>
                     <FontSize>12pt</FontSize>
                     <FontWeight>Bold</FontWeight>
