--- a/Web/Report/PSNP/AnnualReport2.rdl
+++ b/Web/Report/PSNP/AnnualReport2.rdl
@@ -1333,7 +1333,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>DISASTER RISK MANAGEMENT AND FOOD SECURITY SECTOR</Value>
+                  <Value>NATIONAL DISASTER MANAGEMENT COMMISSION</Value>
                   <Style>
                     <FontStyle>Normal</FontStyle>
                     <FontSize>12pt</FontSize>
