--- a/Web/Report/Procurment/RFQ.rdlc
+++ b/Web/Report/Procurment/RFQ.rdlc
@@ -9,7 +9,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>Disaster Risk Management and Food Security Sector</Value>
+                <Value>National Disaster Management Commission</Value>
                 <Style>
                   <FontSize>16pt</FontSize>
                   <FontWeight>Bold</FontWeight>
