--- a/Web/Report/EarlyWarning/RRDDetail.rdlc
+++ b/Web/Report/EarlyWarning/RRDDetail.rdlc
@@ -734,7 +734,7 @@
                                               <Paragraph>
                                                 <TextRuns>
                                                   <TextRun>
-                                                    <Value>DISASTER RISK MANAGEMENT AND FOOD SECURITY SECTOR</Value>
+                                                    <Value>NATIONAL DISASTER RISK MANAGEMENT COMMISSION</Value>
                                                     <Style>
                                                       <FontFamily>Verdana</FontFamily>
                                                       <FontSize>14pt</FontSize>
