--- a/Web/Report/Procurment/TransportOrder.rdlc
+++ b/Web/Report/Procurment/TransportOrder.rdlc
@@ -891,7 +891,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>DISASTER RISK MANAGEMENT AND FOOD SECURITY SECTOR</Value>
+                                  <Value>NATIONAL DISASTER MANAGEMENT COMMISSION</Value>
                                   <Style>
                                     <FontSize>12pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
